--- a/index.html
+++ b/index.html
@@ -215,3 +215,106 @@
 </script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="hi">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Anup AI Voice + Real Voice</title>
+  <meta name="description" content="Anup AI Voice Generator - सुनिए AI और मेरी खुद की आवाज़ एक साथ। Free Text to Speech in Hindi & English.">
+  <meta name="keywords" content="Anup AI Voice, Hindi Text to Speech, Real Voice, AI Voice Generator">
+  <meta name="author" content="Anup Kumar">
+  <style>
+    body {
+      font-family: sans-serif;
+      background: #f3f4f6;
+      text-align: center;
+      padding: 20px;
+    }
+    h1 {
+      color: #333;
+    }
+    select, textarea, button, input {
+      margin: 10px;
+      padding: 10px;
+      font-size: 16px;
+    }
+    textarea {
+      width: 90%;
+      height: 100px;
+    }
+    button {
+      background: #007bff;
+      color: white;
+      border: none;
+      border-radius: 6px;
+    }
+    button:hover {
+      background: #0056b3;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>🗣️ Anup AI Voice + 🎤 Real Voice</h1>
+
+  <!-- AI Voice Section -->
+  <h2>🤖 Text to AI Voice</h2>
+  <label>Language:</label>
+  <select id="language">
+    <option value="hi-IN">Hindi</option>
+    <option value="en-US">English</option>
+  </select><br>
+
+  <label>Voice Gender:</label>
+  <select id="voiceGender">
+    <option value="male">Male</option>
+    <option value="female">Female</option>
+  </select><br>
+
+  <label>Speed (1 - 100):</label><br>
+  <input type="range" id="speed" min="1" max="100" value="50" />
+  <span id="speedValue">50</span><br>
+
+  <textarea id="text" placeholder="यहाँ टेक्स्ट लिखें..."></textarea><br>
+  <button onclick="playAI()">🔊 Play AI Voice</button>
+
+  <hr>
+
+  <!-- Real Voice Section -->
+  <h2>🎤 मेरी असली आवाज़ सुनें</h2>
+  <button onclick="playMyVoice()">▶️ मेरी आवाज़ चलाएं</button>
+
+  <script>
+    // Speed range update
+    const speedRange = document.getElementById('speed');
+    const speedValue = document.getElementById('speedValue');
+    speedRange.addEventListener('input', () => {
+      speedValue.textContent = speedRange.value;
+    });
+
+    // AI Voice Play
+    function playAI() {
+      const text = document.getElementById('text').value;
+      const lang = document.getElementById('language').value;
+      const gender = document.getElementById('voiceGender').value;
+      const speed = document.getElementById('speed').value;
+
+      let utterance = new SpeechSynthesisUtterance(text);
+      utterance.lang = lang;
+      utterance.rate = speed / 50;
+      utterance.pitch = gender === 'female' ? 1.3 : 0.9;
+
+      window.speechSynthesis.speak(utterance);
+    }
+
+    // Real Voice Play
+    function playMyVoice() {
+      const audio = new Audio('myvoice.mp3');
+      audio.play();
+    }
+  </script>
+
+</body>
+</html>
+
